--- a/RichTextView/Base.lproj/Main.storyboard
+++ b/RichTextView/Base.lproj/Main.storyboard
@@ -15,9 +15,32 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfu-mI-kNN">
+                                <rect key="frame" x="257.5" y="542" width="85" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="PNm-tr-caH"/>
+                                    <constraint firstAttribute="width" constant="85" id="U2q-bx-C85"/>
+                                </constraints>
+                                <state key="normal" title="@kevinzhow">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="replaceWithUser:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="VuD-50-qs6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="tfu-mI-kNN" secondAttribute="centerX" id="XLo-7L-FLj"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="tfu-mI-kNN" secondAttribute="bottom" constant="28" id="x8Q-Z6-cAg"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="replaceButton" destination="tfu-mI-kNN" id="H5t-oi-lrU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
