--- a/RichTextView/Base.lproj/Main.storyboard
+++ b/RichTextView/Base.lproj/Main.storyboard
@@ -1,43 +1,43 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yOS-jC-1Me">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yOS-jC-1Me">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <deployment version="4096" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="RichTextView" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfu-mI-kNN">
-                                <rect key="frame" x="257.5" y="542" width="85" height="30"/>
-                                <animations/>
+                                <rect key="frame" x="145" y="609" width="85" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="PNm-tr-caH"/>
                                     <constraint firstAttribute="width" constant="85" id="U2q-bx-C85"/>
                                 </constraints>
                                 <state key="normal" title="@kevinzhow">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="replaceWithUser:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="VuD-50-qs6"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="tfu-mI-kNN" secondAttribute="centerX" id="XLo-7L-FLj"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="tfu-mI-kNN" secondAttribute="bottom" constant="28" id="x8Q-Z6-cAg"/>
+                            <constraint firstItem="eGz-Uh-NhD" firstAttribute="centerX" secondItem="tfu-mI-kNN" secondAttribute="centerX" id="XLo-7L-FLj"/>
+                            <constraint firstItem="eGz-Uh-NhD" firstAttribute="bottom" secondItem="tfu-mI-kNN" secondAttribute="bottom" constant="28" id="x8Q-Z6-cAg"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="eGz-Uh-NhD"/>
                     </view>
                     <connections>
                         <outlet property="replaceButton" destination="tfu-mI-kNN" id="H5t-oi-lrU"/>
@@ -49,34 +49,12 @@
         <!--View Controller-->
         <scene sceneID="jWd-6C-GTW">
             <objects>
-                <viewController id="yOS-jC-1Me" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Gv3-2O-aV9"/>
-                        <viewControllerLayoutGuide type="bottom" id="0nB-8t-tlg"/>
-                    </layoutGuides>
+                <viewController id="yOS-jC-1Me" customClass="ViewController" customModule="RichTextView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Pz9-DW-hPP">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2Ny-oQ-cJo" customClass="RichTextView" customModule="RichTextView" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="336"/>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="336" id="iXj-Pi-lba"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                        </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="2Ny-oQ-cJo" secondAttribute="trailing" id="e5j-Xt-X9e"/>
-                            <constraint firstItem="2Ny-oQ-cJo" firstAttribute="top" secondItem="Pz9-DW-hPP" secondAttribute="top" id="jiD-lw-fvR"/>
-                            <constraint firstItem="2Ny-oQ-cJo" firstAttribute="leading" secondItem="Pz9-DW-hPP" secondAttribute="leading" id="pKg-pV-650"/>
-                        </constraints>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="VhB-Qu-9KE"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lls-sd-MEZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
